--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,1 +1,25 @@
-<p>search works!</p>
+<div class="container top30">
+  <div class="row">
+    <div class="col-md-3">
+      <label for="termino">Buscar Artista</label>
+      <input
+        type="text"
+        placeholder="Busque artista..."
+        class="form-control"
+        (keyup)="buscarArtistas()"
+        [(ngModel)]= "termino"
+      />
+    </div>
+
+    <div class="col-md-9" *ngIf= "termino.length > 1">
+      <h1 class="capitalize">{{ termino }}</h1>
+      <hr />
+      <div class="row">
+      <div *ngFor= "let artista of _spotify.artistas" class="col-md-3 text-center puntero">
+        <img [src]= "artista.images | sinfoto" class="img-thumbnail">
+        <p>{{artista.name}}</p>
+      </div>
+      </div>
+    </div>
+  </div>
+</div>
