Modify Search & Routes

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -7,18 +7,22 @@
         placeholder="Busque artista..."
         class="form-control"
         (keyup)="buscarArtistas()"
-        [(ngModel)]= "termino"
+        [(ngModel)]="termino"
       />
     </div>
 
-    <div class="col-md-9" *ngIf= "termino.length > 1">
+    <div class="col-md-9" *ngIf="termino.length > 1">
       <h1 class="capitalize">{{ termino }}</h1>
       <hr />
       <div class="row">
-      <div *ngFor= "let artista of _spotify.artistas" class="col-md-3 text-center puntero">
-        <img [src]= "artista.images | sinfoto" class="img-thumbnail">
-        <p>{{artista.name}}</p>
-      </div>
+        <div
+          *ngFor="let artista of _spotify.artistas"
+          class="col-md-3 text-center puntero"
+          [routerLink]="['/artist', artista.id]"
+        >
+          <img [src]="artista.images | sinfoto" class="img-thumbnail" />
+          <p>{{ artista.name }}</p>
+        </div>
       </div>
     </div>
   </div>
